--- a/app/pages/login/login-common.css
+++ b/app/pages/login/login-common.css
@@ -18,3 +18,8 @@ Button, TextField {
   color: white;
   margin-top: 20;
 }
+.visible {
+  animation-name: show;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
